Bug 253454 - textshape.po: add translation contexts for "Delete"
Summary: textshape.po: add translation contexts for "Delete"
Status: RESOLVED FIXED
Alias: None
Product: koffice
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: KOffice Bug Wranglers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-07 00:30 UTC by Alexander Potashev
Modified: 2010-12-18 10:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2010-10-07 00:30:23 UTC
Version:           unspecified
OS:                Linux

>  #. i18n: file: dialogs/StyleManager.ui:57
>  #. i18n: ectx: property (text), widget (QPushButton, bDelete)
>  #: commands/DeleteCommand.cpp:43 commands/ChangeTrackedDeleteCommand.cpp:76
>  #: commands/ChangeTrackedDeleteCommand.cpp:288 TextTool.cpp:1826 rc.cpp:291
>  msgid "Delete"

I would like to have different translation of those strings (something like "deletion" for QUndoCommands, because it's more suitable for "Undo %1" menu item).

Reproducible: Didn't try
Comment 1 Thomas Zander 2010-12-18 10:44:32 UTC
SVN commit 1207468 by zander:

Rename command i18n Delete -> Deletion

In order to distinguish between the command the the 'delete' button
renaming one to be more logical in usage as an undo command.

BUG:253454

 M  +2 -2      ChangeTrackedDeleteCommand.cpp  
 M  +1 -1      DeleteCommand.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1207468