Rename command i18n Delete -> Deletion

In order to distinguish between the command the the 'delete' button
renaming one to be more logical in usage as an undo command.

BUG:253454